force-app/main/default/objects/Milestone_Ageing__c/Milestone_Ageing__c.object-meta.xml
<CustomObject>
    <label>Milestone Ageing</label>
    <nameField>
        <displayFormat>MA-{0000}</displayFormat>
        <label>Milestone Ageing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestone Ageings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>