force-app/main/default/objects/Milestone_Ageing__c/fields/B1_0_30_Days__c.field-meta.xml
<CustomField>
    <fullName>B1_0_30_Days__c</fullName>
    <label>B1(0-30) Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>