force-app/main/default/objects/Milestone_Ageing__c/fields/B1_Net__c.field-meta.xml
<CustomField>
    <fullName>B1_Net__c</fullName>
    <label>B1 Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>