force-app/main/default/objects/Milestone_Ageing__c/fields/B2_31_60_Days__c.field-meta.xml
<CustomField>
    <fullName>B2_31_60_Days__c</fullName>
    <label>B2(31-60) Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>