force-app/main/default/objects/Milestone_Ageing__c/fields/B3_61_90_Days__c.field-meta.xml
<CustomField>
    <fullName>B3_61_90_Days__c</fullName>
    <label>B3(61-90) Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>