force-app/main/default/objects/Milestone_Ageing__c/fields/B3_Net__c.field-meta.xml
<CustomField>
    <fullName>B3_Net__c</fullName>
    <label>B3 Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>