force-app/main/default/objects/Milestone_Ageing__c/fields/B7_361_Days__c.field-meta.xml
<CustomField>
    <fullName>B7_361_Days__c</fullName>
    <label>B7( &gt;361) Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>