force-app/main/default/objects/Milestone_Ageing__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Milestone Ageings</relationshipLabel>
    <relationshipName>Milestone_Ageings</relationshipName>
    <type>Lookup</type>
</CustomField>