force-app/main/default/objects/Milestone_Ageing__c/fields/Latest_Milestone_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Milestone_Due_Date__c</fullName>
    <label>Latest Milestone Due Date</label>
    <type>Date</type>
</CustomField>