force-app/main/default/objects/Milestone_Ageing__c/fields/Milestone_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Due_Date__c</fullName>
    <formula>Booking__r.Milestone_Due_Date__c</formula>
    <label>Milestone Due Date</label>
    <type>Date</type>
</CustomField>