force-app/main/default/objects/Milestone_Ageing__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Milestone Ageings</relationshipLabel>
    <relationshipName>Milestone_Ageings</relationshipName>
    <type>Lookup</type>
</CustomField>