force-app/main/default/objects/Milestone_Ageing__c/fields/Quotation__c.field-meta.xml
<CustomField>
    <fullName>Quotation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotation</label>
    <referenceTo>Quotation__c</referenceTo>
    <relationshipLabel>Milestone Ageings</relationshipLabel>
    <relationshipName>Milestone_Ageings</relationshipName>
    <type>Lookup</type>
</CustomField>