force-app/main/default/objects/Milestone_Ageing__c/fields/Sub_Project__c.field-meta.xml
<CustomField>
    <fullName>Sub_Project__c</fullName>
    <formula>Booking__r.Cluster__c</formula>
    <label>Sub Project</label>
    <type>Text</type>
</CustomField>