force-app/main/default/objects/Milestone_Ageing__c/fields/Total_Milestone_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Milestone_Amount__c</fullName>
    <label>Total Installment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>