force-app/main/default/objects/Milestone_Ageing__c/fields/Total_On_Account_Money__c.field-meta.xml
<CustomField>
    <fullName>Total_On_Account_Money__c</fullName>
    <label>Total Collections</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>