force-app/main/default/objects/Milestone_Ageing__c/fields/Total_Pre_Registration_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Pre_Registration_Amount__c</fullName>
    <label>Total Pre-Registration Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>