force-app/main/default/objects/Milestone_Ageing__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Milestone Ageings</relationshipLabel>
    <relationshipName>Milestone_Ageings</relationshipName>
    <type>Lookup</type>
</CustomField>