force-app/main/default/objects/Milestone_Ageing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit__c</field>
        <operation>equals</operation>
        <value>A1003</value>
    </filters>
    <label>All</label>
</ListView>